--- a/themes/sam/sass/_elements.sass
+++ b/themes/sam/sass/_elements.sass
@@ -40,7 +40,7 @@
     & .highlight
         width: 100%
     & pre
-        line-height: 2rem
+        line-height: 1.3rem
         border-radius: 3px
         padding: 1rem
         overflow-x: auto
@@ -50,11 +50,11 @@
     & pre > code
         border: none
     & code
-        font-size: 0.9rem
+        font-size: 1.2rem
         font-family: 'Source Code Pro', monospace
-        padding: 0.1rem
-        border-radius: 3px
-        border: 1px solid $links
+        // padding: 0.1rem
+        // border-radius: 3px
+        // border: 1px solid $links
     & img
         width: 100%
         max-width: 100%
