--- a/themes/sam/sass/style.sass
+++ b/themes/sam/sass/style.sass
@@ -33,8 +33,6 @@ h1,h2,h3,h4
     opacity: 1
 
 li
-
-
     opacity: 0.8
     & a
         opacity: 0.9
@@ -73,6 +71,9 @@ figcaption
     text-align: center
     font-size: smaller
     margin-bottom: 0.8rem
+
+pre code
+    font-size: 1rem !important
 
 .homebg
     background: url(../images/bg.jpg) no-repeat center center fixed;
@@ -139,7 +140,12 @@ figcaption
         border-bottom: none
         display: contents
 
+.katex
+    font-size: 1.5rem !important
+       
+
 @import "elements"
+
 
 // Helpers
 
